--- a/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.html
+++ b/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.html
@@ -1,18 +1,10 @@
-<sui-modal 
-  [mustScroll]="true" 
-  [isClosable]="true"
-  [transitionDuration]="0"
-  [size]="'normal'"
-  class="sb-modal"
-  appBodyScroll 
-  (dismissed)="closeModal();" 
-  #contactTypeModal
-  >
+<sui-modal [mustScroll]="true" [isClosable]="true" [transitionDuration]="0" [size]="'normal'" class="sb-modal"
+  appBodyScroll (dismissed)="closeModal();" #contactTypeModal>
 
   <ng-container *ngIf="showForm">
 
     <!--Header-->
-    <div class="sb-modal-header" [ngSwitch]="contactType">
+    <div class="sb-modal-header" [ngClass]="{'darkgreybg': spaceeditemail}" [ngSwitch]="contactType">
       <span *ngSwitchCase="'email'" class="fs-1-286">{{resourceService?.frmelmnts?.lbl?.updateEmailId}}</span>
       <span *ngSwitchCase="'phone'" class="fs-1-286">{{resourceService?.frmelmnts?.lbl?.updatePhoneNo}}</span>
     </div>
@@ -25,19 +17,23 @@
           <div class="sb-field-group" *ngSwitchCase="'email'">
             <label>{{resourceService?.frmelmnts?.prmpt?.enteremailID}}</label>
             <div class="sb-field ui input">
-                <input class="sb-form-control" formControlName="email" type="text" placeholder="Enter Email">
+              <input class="sb-form-control" formControlName="email" type="text" placeholder="Enter Email">
             </div>
-            <label class="ui basic blue error label pt-0" *ngIf="contactTypeForm.controls.email.dirty && contactTypeForm.controls['email'].errors">{{resourceService?.frmelmnts?.lbl?.validEmail}}</label>
-            <label class="ui basic blue error label pt-0" *ngIf="showUniqueError && !(contactTypeForm.controls.email.touched && contactTypeForm.controls['email'].errors)">{{showUniqueError}}</label>
+            <label class="ui basic blue error label pt-0"
+              *ngIf="contactTypeForm.controls.email.dirty && contactTypeForm.controls['email'].errors">{{resourceService?.frmelmnts?.lbl?.validEmail}}</label>
+            <label class="ui basic blue error label pt-0"
+              *ngIf="showUniqueError && !(contactTypeForm.controls.email.touched && contactTypeForm.controls['email'].errors)">{{showUniqueError}}</label>
           </div>
           <div class="sb-field-group" *ngSwitchCase="'phone'">
-              <label>{{resourceService?.frmelmnts?.prmpt?.enterphoneno}}</label>
-              <div class="sb-field ui left icon input">
-                  <input class="sb-form-control" formControlName="phone" type="number" placeholder="Enter Mobile Number">
-                  <i class=" icon">{{resourceService?.frmelmnts?.lbl?.indPhoneCode}}-</i>
-              </div>
-              <label class="ui basic blue error label pt-0" *ngIf="contactTypeForm.controls.phone.dirty && contactTypeForm.controls['phone'].errors">{{resourceService?.frmelmnts?.lbl?.validPhone}}</label>
-              <label class="ui basic blue error label pt-0" *ngIf="showUniqueError && !(contactTypeForm.controls.phone.touched && contactTypeForm.controls['phone'].errors)">{{showUniqueError}}</label>
+            <label>{{resourceService?.frmelmnts?.prmpt?.enterphoneno}}</label>
+            <div class="sb-field ui left icon input">
+              <input class="sb-form-control" formControlName="phone" type="number" placeholder="Enter Mobile Number">
+              <i class=" icon">{{resourceService?.frmelmnts?.lbl?.indPhoneCode}}-</i>
+            </div>
+            <label class="ui basic blue error label pt-0"
+              *ngIf="contactTypeForm.controls.phone.dirty && contactTypeForm.controls['phone'].errors">{{resourceService?.frmelmnts?.lbl?.validPhone}}</label>
+            <label class="ui basic blue error label pt-0"
+              *ngIf="showUniqueError && !(contactTypeForm.controls.phone.touched && contactTypeForm.controls['phone'].errors)">{{showUniqueError}}</label>
           </div>
         </div>
       </form>
@@ -47,21 +43,16 @@
     <!--Actions-->
     <div class="sb-modal-actions">
       <button appTelemetryInteract [telemetryInteractObject]="telemetryInteractObject"
-      [telemetryInteractEdata]="submitInteractEdata"
-        [ngClass]="{'disabled':!enableSubmitBtn}" 
-        (click)="onSubmitForm()" 
-        class="sb-btn sb-btn-normal sb-btn-primary">
-          {{resourceService?.frmelmnts?.btn?.submit}}
-        </button>
+        [telemetryInteractEdata]="submitInteractEdata" (click)="onSubmitForm()"
+        class="sb-btn sb-btn-normal sb-btn-primary" [ngClass]="{'darkgreybg': spaceeditemail}">
+        {{resourceService?.frmelmnts?.btn?.submit}}
+      </button>
     </div>
     <!--/Actions-->
   </ng-container>
 
-  <app-otp-popup 
-    *ngIf="!showForm" 
-    [otpData]="otpData" 
-    (verificationSuccess)="updateProfile($event)" 
-    (redirectToParent)="showParentForm($event)">
+  <app-otp-popup *ngIf="!showForm" [otpData]="otpData" [spaceeditemail]="spaceeditemail"
+    (verificationSuccess)="updateProfile($event)" (redirectToParent)="showParentForm($event)">
   </app-otp-popup>
 </sui-modal>
 
