--- a/src/app/client/src/app/modules/public/module/explore/components/explore-content/explore-content.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-content/explore-content.component.html
@@ -71,7 +71,7 @@
         <div in-view-item [id]="i" [data]="content" class="masonry-item"
           *ngFor="let content of contentList;let i = index;">
           <app-card appContentDirection [data]="content" appTelemetryInteract
-            [telemetryInteractEdata]="cardIntractEdata" *ngIf="slug === 'sbwb'"
+            [telemetryInteractEdata]="cardIntractEdata" *ngIf="this.slug !== 'sunbirdorg' && this.slug !== 'space'"
             [telemetryInteractObject]="{id:content.metaData.identifier,type:content.metaData.contentType || 'content',ver:'1.0'}"
             (clickEvent)="playContent($event)" ></app-card>
             <app-asset-card  appContentDirection [data]="content" appTelemetryInteract [telemetryInteractEdata]="cardIntractEdata" [telemetryInteractObject]="{id:content.metaData.identifier,type:content.metaData.contentType || 'content',ver:'1.0'}"
