--- a/src/app/client/src/app/modules/public/module/explore/components/explore/explore.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore/explore.component.html
@@ -1,5 +1,5 @@
 <div [appTelemetryImpression]="telemetryImpression">
-  <app-prominent-filter [pageId]="'explore-page'" *ngIf="initFilters && slug === 'sbwb'" [filterEnv]="filterType"
+  <app-prominent-filter [pageId]="'explore-page'" *ngIf="initFilters && slug !== 'sunbirdorg' && slug !== 'space' " [filterEnv]="filterType"
     [ignoreQuery]="['key']" [accordionDefaultOpen]=true [isShowFilterLabel]=true [showSearchedParam]=true
     [isShowFilterLabel]=true [hashTagId]="hashTagId" (prominentFilter)="getFilters($event)"></app-prominent-filter>
   <app-space-prominent-filter [pageId]="'explore-page'" *ngIf="initFilters && slug === 'space'" [slugInfo]="slug"
@@ -14,11 +14,11 @@
   </div>
                 <div class="ui container mt-24" *ngIf="slug !== 'sunbirdorg'">
     <div class="ui grid" >
-      <div *ngIf="slug==='sbwb'">
+      <div *ngIf="slug !== 'sunbirdorg' && slug !== 'space'">
       <div class="twelve wide column" *ngFor="let section of pageSections;let last = last"
         [ngClass]="{'last mb-30':last}">
         <app-page-section (visits)="prepareVisits($event)" (playEvent)="playContent($event)" [section]="section"
-          [slug]="slug" (viewAll)="viewAll($event)" *ngIf="slug === 'sbwb'"></app-page-section>
+          [slug]="slug" (viewAll)="viewAll($event)" *ngIf="slug !== 'sunbirdorg' && slug !== 'space'"></app-page-section>
         </div>
       </div>
         <div class="twelve wide column">
