changed color of otp popup submit button

--- a/src/app/client/src/app/modules/shared-feature/components/otp-popup/otp-popup.component.html
+++ b/src/app/client/src/app/modules/shared-feature/components/otp-popup/otp-popup.component.html
@@ -39,7 +39,7 @@
 
 <!--Actions-->
 <div class="sb-modal-actions">
-  <button appTelemetryInteract [telemetryInteractObject]="telemetryInteractObject"
+  <button style="color:white" appTelemetryInteract [telemetryInteractObject]="telemetryInteractObject"
     [telemetryInteractEdata]="submitInteractEdata"
     [ngClass]="{'disabled':!enableSubmitBtn,'darkgreybg': spaceeditemail}" class="sb-btn sb-btn-normal sb-btn-primary"
     (click)="verifyOTP()">
