--- a/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.html
+++ b/src/app/client/src/app/plugins/profile/components/update-contact-details/update-contact-details.component.html
@@ -44,7 +44,7 @@
     <div class="sb-modal-actions">
       <button appTelemetryInteract [telemetryInteractObject]="telemetryInteractObject"
         [telemetryInteractEdata]="submitInteractEdata" (click)="onSubmitForm()"
-        class="sb-btn sb-btn-normal sb-btn-primary" [ngClass]="{'darkgreybg': spaceeditemail}">
+        class="sb-btn sb-btn-normal sb-btn-primary" [ngClass]="{'disabled':!enableSubmitBtn,'darkgreybg': spaceeditemail}">
         {{resourceService?.frmelmnts?.btn?.submit}}
       </button>
     </div>
