--- a/src/app/client/src/app/app.component.html
+++ b/src/app/client/src/app/app.component.html
@@ -6,7 +6,7 @@
   <app-validate-teacher-identifier-popup *ngIf="showUserVerificationPopup && labels" [labels]="labels" [userFeedData]="userFeed"> </app-validate-teacher-identifier-popup>
   <app-user-location (close)="onLocationSubmit()" *ngIf="!isLocationConfirmed" [isCustodianOrgUser]="isCustodianOrgUser" [deviceProfile]="deviceProfile" [userProfile]="usersProfile">
   </app-user-location>
-  <app-header *ngIf="!hideHeaderNFooter" [routerEvents]="routeData$"></app-header>
+  <!-- <app-header *ngIf="!hideHeaderNFooter" [routerEvents]="routeData$"></app-header> -->
   <app-install-app (viewInBrowser)="viewInBrowser($event)" *ngIf="showAppPopUp && userService.loggedIn && !isOffline">
   </app-install-app>
 
