--- a/src/app/client/src/app/modules/myassets/components/pdf-viewer/pdf-viewer.component.html
+++ b/src/app/client/src/app/modules/myassets/components/pdf-viewer/pdf-viewer.component.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container mt-30" *ngIf="!showLoader && !epub">
-    <iframe [src]="assetDetail" class="pdf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allowfullscreen class="e2e-iframe-untrusted-src"></iframe>
+    <iframe [src]="assetDetail" class="pdf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allow="autoplay" allowfullscreen class="e2e-iframe-untrusted-src"></iframe>
 
 </div>
 <div class="container mt-30" *ngIf="epub">
