--- a/src/app/client/src/app/modules/myassets/components/space-data-driven/space-data-driven.component.html
+++ b/src/app/client/src/app/modules/myassets/components/space-data-driven/space-data-driven.component.html
@@ -46,7 +46,7 @@
                     <div *ngIf="fields.inputType==='text' && fields.code==='link'" class="required field"
                         [ngClass]="{ 'disabled':!fields.editable}">
 
-                        <div class="field required">
+                        <div class="field">
                             <label>
                           
                             </label>
