--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -19,15 +19,15 @@
 
           <div class="card-header">
             <div class="row">
-                <div class="thick-gray-border sprite knowledgeimg" *ngIf="content?.board === 'Knowledge'">
+                <div class="thick-gray-border sprite knowledgeimg" *ngIf="content?.assetType === 'Knowledge'">
                   </div>
-                  <div class="thick-gray-border sprite hardwareimg" *ngIf="content?.board === 'Hardware'">
+                  <div class="thick-gray-border sprite hardwareimg" *ngIf="content?.assetType === 'Hardware'">
                   </div>
-                  <div class="thick-gray-border  sprite softwareimg" *ngIf="content?.board === 'Software'">
+                  <div class="thick-gray-border  sprite softwareimg" *ngIf="content?.assetType === 'Software'">
                   </div>
-                  <div class="thick-gray-border  sprite processimg" *ngIf="content?.board === 'Process'">
+                  <div class="thick-gray-border  sprite processimg" *ngIf="content?.assetType === 'Process'">
                   </div>
-                  <div class="thick-gray-border  sprite dataimg" *ngIf="content?.board === 'Data'">
+                  <div class="thick-gray-border  sprite dataimg" *ngIf="content?.assetType === 'Data'">
                   </div>
                   <div class="col-sm-8">
                       <div class="text-light pt-3">
@@ -45,7 +45,7 @@
              <p class="creator mb-0">Created By : {{content?.creators}}</p>
              <!-- <p class="creator mb-0">Country : {{content?.region}}</p> -->
              <p class="creator mb-0"> Created Year: {{content?.year}}</p>
-             <p class="creator contentlink mb-0" id="link" *ngIf="content?.mimeType === 'text/x-url' &&content?.link">Link : {{content?.link}}</p>
+             <p class="creator contentlink mb-0" id="link" *ngIf="content?.link && content.link !== ''">Link : {{content?.link}}</p>
             <div class="">  <span class="desc1">Description: </span>   <span class="card-text1">{{content?.description | titlecase | slice:0:60}}</span>   <span *ngIf="content?.description && content.description?.length > 60">...</span></div>
             
             <div class="d-flex justify-content-center mt-30">
@@ -54,7 +54,7 @@
                 <i class="trash large icon" style="color: #6c757d!important;"></i>
               </button>
               <div *ngIf="content?.status==='Draft'">
-                <button type="button" class="btn ml-4" [disabled]="!!!content.artifactUrl" id="pub" (click)="reviewConfirmModal(content.identifier, content.status); $event.stopPropagation()"><i class="fas fa-upload"></i>&nbsp; SEND FOR REVIEW</button>
+                <button type="button" class="btn ml-4" [disabled]="(!!!content.source && !!!content.link)" id="pub" (click)="reviewConfirmModal(content.identifier, content.status); $event.stopPropagation()"><i class="fas fa-upload"></i>&nbsp; SEND FOR REVIEW</button>
               </div>
               <div *ngIf="(content?.status==='Review') && route.url !== '/upForReview'">
                 <button type="button" class="btn ml-4" id="pub" disabled><i class="fas fa-upload"></i>&nbsp; SUBMITTED FOR REVIEW</button>
@@ -66,18 +66,18 @@
                   <button type="button" class="btn ml-4 text-light" id="badge">VERIFY</button>
               </div> -->
               <button
-                *ngIf="(content?.status==='Draft' || content?.status=== 'DRAFT') && route.isActive('myassets')"
+                *ngIf="(content?.status==='Draft' || content?.status=== 'DRAFT' || content?.status=== 'LIVE' || content?.status=== 'Live') && route.isActive('myassets')"
                 type="button" class="btn text-secondary ml-4" id="style"
                 (click)="navigateToEditPage(content?.identifier, content?.status)">
                 <i class="fas fa-pencil-alt"></i>
               </button>
 
-              <button
+              <!-- <button
                 *ngIf="(content?.status=== 'LIVE' || content?.status=== 'Live') && route.isActive('myassets')"
                 type="button" class="btn text-secondary ml-4" id="style"
                 (click)="navigateToMyAssetPage(content?.identifier); $event.stopPropagation()">
                 <i class="fas fa-pencil-alt"></i>
-              </button>
+              </button> -->
 
             </div>
             <!-- <div *ngIf="content?.status==='Live'" class="badgedisplay">
