--- a/src/app/client/src/app/modules/public/module/explore/components/pdf-viewer/spacepdf-viewer.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/pdf-viewer/spacepdf-viewer.component.html
@@ -4,7 +4,7 @@
         (click)="navigateToDetailsPage()"><i class="fa fs-2 fa-angle-left"></i></button>
 </div>
 <div class="container mt-30" *ngIf="!showLoader && !epub">
-        <iframe [src]="assetDetail" class="pdf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" allowfullscreen class="e2e-iframe-untrusted-src"></iframe>
+        <iframe [src]="assetDetail" class="pdf" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"  allow="autoplay" allowfullscreen class="e2e-iframe-untrusted-src"></iframe>
     
     </div>
     <div class="container mt-30" *ngIf="epub">
