--- a/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.html
+++ b/src/app/client/src/app/modules/shared/components/space-page-section/space-page-section.component.html
@@ -22,14 +22,14 @@
 </div>
 
 <div class="ui grid" *ngIf="enable">
-        <div class="ui grid" *ngIf="slug === 'space' && section[0]?.contents && section[0]?.contents.length > 0">
+        <div class="ui grid" *ngIf="slug === 'space' && section[0] && section.length > 0">
                 <div class="ui twelve wide column ">
                     <div class="d-flex flex-ai-center">
                        
-                 <button class="ui button small bs-1 mb-24 ml-auto" [ngClass]="{'resourcepagebtn': isResourcePage }" *ngIf="section[0]?.contents.length >= 10 && section.name != 'My Courses' " type="button" (click)="navigateToViewAll(section[0])">View More</button>
+                 <button class="ui button small bs-1 mb-24 ml-auto" [ngClass]="{'resourcepagebtn': isResourcePage }" *ngIf="section.length >= 10 && section.name != 'My Courses' " type="button" (click)="navigateToViewAll(section[0])">View More</button>
                   </div>
                     <div *ngIf="flag === false" class="row">
-                            <div in-view-item *ngFor="let content of section[0]?.contents;let i = index; let last = last" class="four wide column">    
+                            <div in-view-item *ngFor="let content of section;let i = index; let last = last" class="four wide column">    
                                     <app-space-card   appTelemetryInteract 
                                     [telemetryInteractEdata]="cardIntractEdata" 
                                     [telemetryInteractObject]="{id:content.metaData.identifier || content.metaData.courseId,type:content.metaData.contentType || 'Course',ver:'1.0'}"
@@ -41,7 +41,7 @@
                             </div>
                     </div>
                     <div *ngIf="flag === true" class="row">
-                        <div in-view-item *ngFor="let content of section[0]?.contents;let i = index; let last = last" class="four wide column">    
+                        <div in-view-item *ngFor="let content of section;let i = index; let last = last" class="four wide column">    
                                 <app-space-card-loggedin   appTelemetryInteract 
                                 [telemetryInteractEdata]="cardIntractEdata" 
                                 [telemetryInteractObject]="{id:content.metaData.identifier || content.metaData.courseId,type:content.metaData.contentType || 'Course',ver:'1.0'}"
