--- a/src/app/client/src/app/modules/workspace/components/content-creation-default-template/content-creation-default-template.component.html
+++ b/src/app/client/src/app/modules/workspace/components/content-creation-default-template/content-creation-default-template.component.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div *ngIf="field.inputType==='select' && field.code==='license'" class="sb-field-group" [ngClass]="{ 'disabled':!field.editable}">
-      <label>{{field.label}}  License</label>
+      <label>{{field.label}}</label>
       <div class="sb-field">
         <sui-select id={{field.code}} name={{field.code}} class="selection" [(ngModel)]="formInputData[field.code]" (ngModelChange)="updateForm({index:i, field:field, value:formInputData[field.code]})">
           <sui-select-option *ngFor="let option of field.range" [value]="option"></sui-select-option>
