--- a/src/app/client/src/app/modules/core/components/main-footer/main-footer.component.html
+++ b/src/app/client/src/app/modules/core/components/main-footer/main-footer.component.html
@@ -66,7 +66,7 @@
                     info@sunbird.org
                 </div>
                 <label class=" d-block ">
-          <a appTelemetryInteract [telemetryInteractEdata]="setTelemetryInteractEdata( 't&c') " href="/term-of-use.html ">
+          <a appTelemetryInteract [telemetryInteractEdata]="setTelemetryInteractEdata( 't&c') " href="https://www.sunbird.org/sandbox-terms-conditions">
             {{resourceService.frmelmnts?.lnk?.footerTnC}}
           </a>
           <span>| &copy; {{date | date:'yyyy'}}, SUNBIRD</span>
